- Fix layout breaking issue on mobile landing page

--- a/src/stylesheets/landing_page.module.sass
+++ b/src/stylesheets/landing_page.module.sass
@@ -37,8 +37,8 @@
     @media only screen and (max-width: 480px)
       display: none
   h3.mobileHeading
-    word-break: keep-all
-    margin-bottom: 1rem
+    word-break: break-all
+    margin-bottom: 0.5rem
     @media only screen and (min-width: 480px)
       display: none
 
